5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1836_2604.log
== TEST (2019-07-01 21:12:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
y = array(eval(input("eng. mec: ")))
for i in range(shape(y)[0]):
	print(max(y[x]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:13:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
y = array(eval(input("eng. mec: ")))
for i in range(shape(y)[0]):
	print(max(y[x]))
-- EXECUTION TIME:
0.856808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 5, in <module>
    print(max(y[x]))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:13:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

y = array(eval(input("eng. mec: ")))
for i in range(shape(y)[0]):
	print(max(y[x]))
-- EXECUTION TIME:
0.987424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 6, in <module>
    print(max(y[x]))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:14:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

y = array(eval(input("eng. mec: ")))

for i in range(shape(y)[0]):
	print(max(y[i]))
-- EXECUTION TIME:
0.945113
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:14:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

y = array(eval(input("eng. mec: ")))

for i in range(shape(y)[0]):
	print(max(y[i]))
-- EXECUTION TIME:
0.951094
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
